# bettroid

./: CMakeLists.txt
src/: Game.cpp  Game.h
src/Common/: Mesh.h  Quad.cpp  Renderer.cpp  Renderer.h
